--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  //"jwtConfig": {
+    //"Secret": "SuperSecretSecret"
+  //},
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ZLATI\\SQLEXPRESS01;Initial Catalog=ShoesStore1;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
