--- a/appsettings.json
+++ b/appsettings.json
@@ -2,9 +2,9 @@
   //"jwtConfig": {
     //"Secret": "SuperSecretSecret"
   //},
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ZLATI\\SQLEXPRESS01;Initial Catalog=ShoesStore1;Integrated Security=True"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=VikingShop;Integrated Security=True"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
