adding migration and connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,9 +2,9 @@
   //"jwtConfig": {
     //"Secret": "SuperSecretSecret"
   //},
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=VikingShop;Integrated Security=True"
-  //},
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=VikingShop;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
